--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -27,7 +27,7 @@ tracing = { workspace = true }
 rustc-hash = { workspace = true }
 console_error_panic_hook = { version = "0.1.7", optional = true }
 futures-util = { workspace = true, features = [
-    "std",
+    # "std",
     "async-await",
     "async-await-macro",
 ] }
@@ -72,7 +72,7 @@ document = ["dioxus-html/document", "dep:serde-wasm-bindgen", "dep:serde_json", 
 dioxus = { workspace = true, default-features = true }
 wasm-bindgen-test = "0.3.29"
 dioxus-ssr = { workspace = true, default-features = false }
-gloo-timers = "0.2.3"
+gloo-timers = { workspace = true }
 gloo-dialogs = "0.1.1"
 dioxus-web = { path = ".", features = ["hydrate"] }
 tracing-wasm = "0.2.1"
