... screw it, bring in manganis

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,16 @@ members = [
     "packages/playwright-tests/fullstack",
     "packages/playwright-tests/suspense-carousel",
     "packages/playwright-tests/nested-suspense",
+
+    # manganis
+    "packages/manganis",
+    "packages/manganis-macro",
+    "packages/manganis-common",
+    "packages/manganis-cli-support",
+    "packages/manganis-resolver",
+    "packages/manganis-test-package",
+    "packages/manganis-test-package/test-package-dependency",
+    "packages/manganis-test-package/test-package-nested-dependency",
 ]
 exclude = ["examples/mobile_demo", "examples/openid_connect_demo"]
 
@@ -92,10 +102,17 @@ dioxus-static-site-generation = { path = "packages/static-generation", version =
 dioxus_server_macro = { path = "packages/server-macro", version = "0.6.0-alpha.2", default-features = false }
 lazy-js-bundle = { path = "packages/lazy-js-bundle", version = "0.6.0-alpha.2" }
 
-manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"], path = "../ecosystem-dioxus/manganis/packages/cli-support" }
-manganis = { version = "0.3.0-alpha.0", default-features = false, features = ["macro"], path = "../ecosystem-dioxus/manganis/packages/manganis" }
+manganis  = { path = "packages/manganis", version = "0.6.0-alpha.2" }
+manganis-common  = { path = "packages/manganis-common", version = "0.6.0-alpha.2" }
+manganis-cli-support  = { path = "packages/manganis-cli-support", version = "0.6.0-alpha.2" }
+manganis-macro  = { path = "packages/manganis-macro", version = "0.6.0-alpha.2" }
+manganis-resolver  = { path = "packages/manganis-resolver", version = "0.6.0-alpha.2" }
+
+
 warnings = { version = "0.2.0" }
 
+# manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"], path = "../ecosystem-dioxus/manganis/packages/cli-support" }
+# manganis = { version = "0.3.0-alpha.0", default-features = false, features = ["macro"], path = "../ecosystem-dioxus/manganis/packages/manganis" }
 # manganis-cli-support = { version = "0.3.0-alpha.0", features = ["html"] }
 # manganis = { version = "0.3.0-alpha.0", default-features = false }
 # manganis-cli-support = { version = "0.3.0-alpha.1", features = ["html"] }
@@ -151,6 +168,7 @@ uuid = "1.9.1"
 convert_case = "0.6.0"
 tokio-tungstenite = { version = "0.23.1" }
 gloo-timers = "0.3.0"
+fluent-uri = { version = "0.2.0", features = ["serde"] }
 
 # desktop
 wry = { version = "0.42.0", default-features = false }
