--- a/packages/desktop/Cargo.toml
+++ b/packages/desktop/Cargo.toml
@@ -57,6 +57,14 @@ tao = { version = "0.26.1", features = ["rwh_05"] }
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3.17"
 
+[target.'cfg(target_os = "linux")'.dependencies]
+wry = { version = "0.41.0", features = [
+    "os-webview",
+    "protocol",
+    "drag-drop",
+    "linux-body"
+] }
+
 [target.'cfg(any(target_os = "windows",target_os = "macos",target_os = "linux",target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
 global-hotkey = "0.5.0"
 rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
