cut down web deps to 150

--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -90,7 +90,7 @@ brotli = "6.0.0"
 dioxus-autofmt = { workspace = true }
 dioxus-check = { workspace = true }
 rsx-rosetta = { workspace = true }
-dioxus-rsx = { workspace = true, features = ["serde"]}
+dioxus-rsx = { workspace = true, features = ["serde", "hot-reload"] }
 dioxus-html = { workspace = true, features = ["hot-reload-context"] }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-hot-reload = { workspace = true, features = ["serve"] }
