--- a/packages/manganis-macro/Cargo.toml
+++ b/packages/manganis-macro/Cargo.toml
@@ -19,16 +19,14 @@ syn = { version = "2.0", features = ["full", "extra-traits"] }
 serde_json = "1.0"
 base64 = { workspace = true, optional = true }
 serde = { workspace = true, features = ["derive"] }
-manganis-common = { workspace = true }
 
+# manganis-common = { workspace = true }
 # manganis-cli-support = { workspace = true, optional = true }
-
 # manganis-common = { path = "../common", version = "0.3.0-alpha.1" }
 # manganis-cli-support = { path = "../cli-support", version = "0.3.0-alpha.1", optional = true }
 # base64 = { version = "0.21.5", optional = true }
-
-[build-dependencies]
-manganis-common = { workspace = true }
+# [build-dependencies]
+# manganis-common = { workspace = true }
 
 [features]
 default = ["url-encoding"]
