--- a/packages/hot-reload/Cargo.toml
+++ b/packages/hot-reload/Cargo.toml
@@ -16,36 +16,38 @@ dioxus-html = { workspace = true, optional = true }
 dioxus-signals = { workspace = true, optional = true }
 dioxus-cli-config = { workspace = true, optional = true, features = ["read-config"] }
 
-notify = { workspace = true, optional = true }
-chrono = { version = "0.4.24", default-features = false, features = ["clock"], optional = true }
-serde_json = "1.0.91"
 serde = { version = "1", features = ["derive"] }
-execute = { version = "0.2.11", optional = true }
-once_cell = { version = "1.17.0", optional = true }
-ignore = { version = "0.4.19", optional = true }
 
 # hot reloading serve
-tokio-stream = { version = "0.1.12", features = ["sync"], optional = true }
 futures-util = { workspace = true, features = ["async-await-macro"], optional = true }
 tokio = { workspace = true, features = ["sync", "rt-multi-thread"], optional = true }
 tracing = { workspace = true }
 warnings.workspace = true
 
-# use rustls on android
-[target.'cfg(target_os = "android")'.dependencies]
-tokio-tungstenite = { workspace = true, optional = true, features = ["rustls"] }
+# tokio-stream = { version = "0.1.12", features = ["sync"], optional = true }
+# notify = { workspace = true, optional = true }
+# chrono = { version = "0.4.24", default-features = false, features = ["clock"], optional = true }
+# execute = { version = "0.2.11", optional = true }
+# once_cell = { version = "1.17.0", optional = true }
+# ignore = { version = "0.4.19", optional = true }
 
-# use native tls on other platforms
-[target.'cfg(not(target_os = "android"))'.dependencies]
-tokio-tungstenite = { workspace = true, optional = true, features = ["native-tls"] }
+# # use rustls on android
+# [target.'cfg(target_os = "android")'.dependencies]
+# tokio-tungstenite = { workspace = true, optional = true, features = ["rustls"] }
+
+# # use native tls on other platforms
+# [target.'cfg(not(target_os = "android"))'.dependencies]
+# tokio-tungstenite = { workspace = true, optional = true, features = ["native-tls"] }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
+serde_json = "1.0.91"
 
 [features]
-default = ["dioxus-html"]
+default = []
 client = ["dep:dioxus-signals"]
-serve = ["dep:tokio-stream", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:dioxus-cli-config"]
+serve = ["dep:futures-util", "dep:tokio", "dep:dioxus-cli-config"]
+# serve = ["dep:tokio-stream", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:dioxus-cli-config"]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
