--- a/packages/html/Cargo.toml
+++ b/packages/html/Cargo.toml
@@ -22,41 +22,17 @@ euclid = "0.22.7"
 enumset = "1.1.2"
 keyboard-types = { version = "0.7", default-features = false }
 async-trait = { version = "0.1.58", optional = true }
-tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
-futures-channel = { workspace = true }
 serde_json = { version = "1", optional = true }
 tracing.workspace = true
-rustversion = "1.0.17"
+
+tokio = { workspace = true, features = ["fs", "io-util"], optional = true }
+futures-channel = { workspace = true }
 
 # todo: we shouldn't have any wasm-bindgen dependencies in the html cratea
 # [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { workspace = true, optional = true }
 js-sys = { version = "0.3.56", optional = true }
 wasm-bindgen-futures = { workspace = true, optional = true }
-
-[dependencies.web-sys]
-optional = true
-version = "0.3.56"
-features = [
-    "Touch",
-    "TouchList",
-    "TouchEvent",
-    "MouseEvent",
-    "DragEvent",
-    "InputEvent",
-    "HtmlInputElement",
-    "ClipboardEvent",
-    "KeyboardEvent",
-    "WheelEvent",
-    "AnimationEvent",
-    "TransitionEvent",
-    "PointerEvent",
-    "FocusEvent",
-    "CompositionEvent",
-    "CustomEvent",
-    "ResizeObserverEntry",
-    "ResizeObserverSize"
-]
 
 [build-dependencies]
 lazy-js-bundle = { workspace = true }
@@ -79,12 +55,12 @@ serialize = [
     "dioxus-core/serialize"
 ]
 mounted = [
-    "web-sys?/Element",
-    "web-sys?/DomRect",
-    "web-sys?/ScrollIntoViewOptions",
-    "web-sys?/ScrollLogicalPosition",
-    "web-sys?/ScrollBehavior",
-    "web-sys?/HtmlElement",
+    # "web-sys?/Element",
+    # "web-sys?/DomRect",
+    # "web-sys?/ScrollIntoViewOptions",
+    # "web-sys?/ScrollLogicalPosition",
+    # "web-sys?/ScrollBehavior",
+    # "web-sys?/HtmlElement",
 ]
 document = [
     "dep:serde",
@@ -92,16 +68,17 @@ document = [
 ]
 file-engine = [
     "dep:async-trait",
-    "dep:js-sys",
-    "web-sys?/File",
-    "web-sys?/FileList",
-    "web-sys?/FileReader"
+    # "dep:js-sys",
+    # "web-sys?/File",
+    # "web-sys?/FileList",
+    # "web-sys?/FileReader"
 ]
-wasm-bind = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
-native-bind = ["dep:tokio", "file-engine"]
+# wasm-bind = ["dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
+# native-bind = ["dep:tokio", "file-engine"]
 hot-reload-context = ["dep:dioxus-rsx", "dioxus-rsx/hot_reload_traits"]
 html-to-rsx = []
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
-feature = ["html-to-rsx", "hot-reload-context", "html-to-rsx", "native-bind", "wasm-bind"]
+feature = ["html-to-rsx", "hot-reload-context", "html-to-rsx"]
+# feature = ["html-to-rsx", "hot-reload-context", "html-to-rsx", "native-bind", "wasm-bind"]
