--- a/packages/rsx/Cargo.toml
+++ b/packages/rsx/Cargo.toml
@@ -13,14 +13,15 @@ keywords = ["dom", "ui", "gui", "react"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-quote = { workspace = true }
+internment = { workspace = true, optional = true }
 proc-macro2 = { workspace = true, features = ["span-locations"] }
-dioxus-core = { workspace = true, optional = true }
-syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
+proc-macro2-diagnostics = { workspace = true }
+quote = { workspace = true }
 serde = { workspace = true, features = ["derive"], optional = true }
-internment = { version = "0.7.0", optional = true }
+syn = { workspace = true, features = ["full", "extra-traits", "visit", "visit-mut"] }
 tracing = { workspace = true }
-proc-macro2-diagnostics = { version = "0.10", default-features = false }
+dioxus-core = { workspace = true, optional = true } # todo: this is being compiled in a proc macro
+
 
 [features]
 default = []
