--- a/packages/cli/Cargo.toml
+++ b/packages/cli/Cargo.toml
@@ -100,10 +100,12 @@ tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
 console-subscriber = { version = "0.3.0", optional = true }
 tracing = { workspace = true }
 wasm-opt = { version = "0.116.1", optional = true }
-ratatui = { version = "0.28.0", features = ["crossterm", "unstable"] }
+ratatui = { version = "0.27.0", features = ["crossterm", "unstable"] }
 crossterm = { version = "0.27.0", features = ["event-stream"] }
 ansi-to-tui = "=5.0.0-rc.1"
 ansi-to-html = "0.2.1"
+clipboard-rs = "0.1.11"
+wl-clipboard-rs = "0.9.0"
 
 # on macos, we need to specify the vendored feature on ssl when cross compiling
 # [target.'cfg(target_os = "macos")'.dependencies]
