--- a/packages/core/Cargo.toml
+++ b/packages/core/Cargo.toml
@@ -10,6 +10,7 @@ homepage = "https://dioxuslabs.com"
 keywords = ["dom", "ui", "gui", "react"]
 
 [dependencies]
+dioxus-core-types = { workspace = true }
 rustc-hash = { workspace = true }
 longest-increasing-subsequence = "0.1.0"
 futures-util = { workspace = true, default-features = false, features = [
@@ -25,7 +26,6 @@ generational-box = { workspace = true }
 rustversion = "1.0.17"
 const_format = { workspace = true }
 warnings = { workspace = true }
-manganis = { workspace = true, default-features = false, optional = true }
 
 [dev-dependencies]
 tokio = { workspace = true, features = ["full"] }
@@ -48,7 +48,7 @@ features = [
 
 [features]
 serialize = ["dep:serde"]
-manganis = ["dep:manganis"]
+# manganis = ["dep:manganis"]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
