--- a/packages/hot-reload/Cargo.toml
+++ b/packages/hot-reload/Cargo.toml
@@ -10,7 +10,7 @@ description = "Hot reloading utilities for Dioxus"
 keywords = ["dom", "ui", "gui", "react", "hot-reloading"]
 
 [dependencies]
-dioxus-rsx = { workspace = true, features = ["serde"] }
+dioxus-rsx = { workspace = true }
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, optional = true }
 dioxus-signals = { workspace = true, optional = true }
@@ -19,8 +19,6 @@ dioxus-cli-config = { workspace = true, optional = true, features = ["read-confi
 serde = { version = "1", features = ["derive"] }
 
 # hot reloading serve
-futures-util = { workspace = true, features = ["async-await-macro"], optional = true }
-tokio = { workspace = true, features = ["sync", "rt-multi-thread"], optional = true }
 tracing = { workspace = true }
 warnings.workspace = true
 
@@ -46,7 +44,7 @@ serde_json = "1.0.91"
 [features]
 default = []
 client = ["dep:dioxus-signals"]
-serve = ["dep:futures-util", "dep:tokio", "dep:dioxus-cli-config"]
+serve = ["dep:dioxus-cli-config"]
 # serve = ["dep:tokio-stream", "dep:futures-util", "dep:tokio", "dep:tokio-tungstenite", "dep:dioxus-cli-config"]
 
 [package.metadata.docs.rs]
