--- a/packages/fullstack/Cargo.toml
+++ b/packages/fullstack/Cargo.toml
@@ -62,7 +62,7 @@ tower-layer = { version = "0.3.2", optional = true }
 parking_lot = { version = "0.12.1", features = ["send_guard"], optional = true }
 web-sys = { version = "0.3.61", optional = true, features = ["Window", "Document", "Element", "HtmlDocument", "Storage", "console"] }
 
-dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
+# dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
 clap = { version = "4.5.7", optional = true, features = ["derive"] }
 
 aws-lc-rs = { version = "1.8.1", optional = true }
@@ -105,12 +105,12 @@ server = [
     "dep:tracing-futures",
     "dep:pin-project",
     "dep:thiserror",
-    "dep:dioxus-cli-config",
+    # "dep:dioxus-cli-config",
     "dep:async-trait",
     "dep:parking_lot",
     "dioxus-interpreter-js",
     "dep:clap",
-    "dioxus-cli-config/read-from-args",
+    # "dioxus-cli-config/read-from-args",
 ]
 aws-lc-rs = ["dep:aws-lc-rs"]
 
