--- a/packages/manganis/Cargo.toml
+++ b/packages/manganis/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.19.0"
 # infer = { workspace = true }
 # manganis-common = { workspace = true }
 dunce = "1.0.2"
+dioxus-core-types = { workspace = true }
 
 # [target.'cfg(target_os = "macos")'.dependencies]
 # core-foundation = "0.9.3"
