--- a/packages/ssr/Cargo.toml
+++ b/packages/ssr/Cargo.toml
@@ -12,7 +12,7 @@ keywords = ["dom", "ui", "gui", "react", "ssr"]
 dioxus-core = { workspace = true, features = ["serialize"] }
 dioxus-html = { workspace = true, features = ["document"]}
 dioxus-core-types = { workspace = true }
-dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
+# dioxus-cli-config = { workspace = true, features = ["read-config"], optional = true }
 dioxus-interpreter-js = { workspace = true }
 generational-box = { workspace = true }
 askama_escape = "0.10.3"
@@ -46,7 +46,7 @@ fs_extra = "1.2.0"
 
 [features]
 default = []
-incremental = ["dep:tokio", "dep:chrono", "dep:dioxus-cli-config"]
+incremental = ["dep:tokio", "dep:chrono"]
 
 [package.metadata.docs.rs]
 cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
