--- a/packages/liveview/Cargo.toml
+++ b/packages/liveview/Cargo.toml
@@ -36,7 +36,7 @@ generational-box = { workspace = true }
 axum = { workspace = true, optional = true, features = ["ws"] }
 
 [dev-dependencies]
-pretty_env_logger = { version = "0.5.0" }
+env_logger = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 axum = { workspace = true, features = ["ws"] }
 tower = { workspace = true }
