--- a/Cargo.toml
+++ b/Cargo.toml
@@ -162,6 +162,7 @@ fluent-uri = { version = "0.2.0", features = ["serde"] }
 internment = { version = "0.7.0" }
 proc-macro2-diagnostics = { version = "0.10", default-features = false }
 env_logger = "0.11.0"
+tracing-subscriber = "0.3.17"
 
 # desktop
 wry = { version = "0.42.0", default-features = false }
