--- a/packages/web/Cargo.toml
+++ b/packages/web/Cargo.toml
@@ -23,24 +23,19 @@ dioxus-interpreter-js = { workspace = true, features = [
 ] }
 generational-box = { workspace = true }
 
+async-trait = { workspace = true }
+ciborium = { workspace = true, optional = true }
+console_error_panic_hook = { version = "0.1.7", optional = true }
+futures-channel = { workspace = true }
+futures-util = { workspace = true, features = [ "async-await", "async-await-macro" ] }
 js-sys = "0.3.56"
+rustc-hash = { workspace = true }
+serde = { workspace = true, optional = true }
+serde_json = { workspace = true, optional = true }
+serde-wasm-bindgen = { version = "0.5.0", optional = true }
+tracing = { workspace = true }
 wasm-bindgen = { workspace = true }
 wasm-bindgen-futures = "0.4.29"
-tracing = { workspace = true }
-rustc-hash = { workspace = true }
-console_error_panic_hook = { version = "0.1.7", optional = true }
-futures-util = { workspace = true, features = [
-    # "std",
-    "async-await",
-    "async-await-macro",
-] }
-async-trait = { workspace = true }
-futures-channel = { workspace = true }
-serde_json = { version = "1.0", optional = true }
-serde = { version = "1.0", optional = true }
-serde-wasm-bindgen = { version = "0.5.0", optional = true }
-
-ciborium = { workspace = true, optional = true }
 
 [dependencies.web-sys]
 version = "0.3.56"
@@ -82,25 +77,33 @@ features = [
 [build-dependencies]
 lazy-js-bundle = { workspace = true }
 
-
 [features]
-default = ["panic_hook", "mounted","hot_reload", "document"]
+default = ["panic_hook", "mounted", "hot_reload", "document"]
 # default = ["panic_hook", "mounted", "file_engine", "hot_reload", "document"]
 panic_hook = ["dep:console_error_panic_hook"]
 hydrate = ["web-sys/Comment", "ciborium", "dep:serde"]
 mounted = ["web-sys/Element", "dioxus-html/mounted"]
-file_engine = [
-    "dioxus-html/file-engine",
+file_engine = ["dioxus-html/file-engine"]
+hot_reload = [
+    "web-sys/MessageEvent",
+    "web-sys/WebSocket",
+    "web-sys/Location",
+    "dep:serde_json",
+    "dep:serde",
+    "dioxus-core/serialize",
 ]
-hot_reload = ["web-sys/MessageEvent", "web-sys/WebSocket", "web-sys/Location", "dep:serde_json", "dep:serde", "dioxus-core/serialize"]
-document = ["dioxus-html/document", "dep:serde-wasm-bindgen", "dep:serde_json", "dep:serde"]
+document = [
+    "dioxus-html/document",
+    "dep:serde-wasm-bindgen",
+    "dep:serde_json",
+    "dep:serde",
+]
 
 [dev-dependencies]
 dioxus = { workspace = true, default-features = true }
 wasm-bindgen-test = "0.3.29"
 dioxus-ssr = { workspace = true, default-features = false }
 gloo-timers = { workspace = true }
-gloo-dialogs = "0.1.1"
 dioxus-web = { path = ".", features = ["hydrate"] }
 tracing-wasm = "0.2.1"
 
